# sf-collector

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  API.md  AUTHORS  BUILD.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  Dockerfile.alpine.amd64  Dockerfile.alpine.s390x  Dockerfile.bk  Dockerfile.centos.amd64  Dockerfile.cmake  Dockerfile.collector.amd64  Dockerfile.debug  Dockerfile.dev  Dockerfile.dev.amd64  Dockerfile.driver.amd64  Dockerfile.driver.s390x  Dockerfile.falco  Dockerfile.falco.ubi  Dockerfile.libs  Dockerfile.musl  Dockerfile.runtime  Dockerfile.s390x  Dockerfile.ubi  Dockerfile.ubi.amd64  INDEX.md  MAINTAINERS.md  Makefile  README.md  SPEC.md  build  buildIBMRegistry  clean  (+7 more)
.github/workflows/: ci.yaml  ubi.yaml
cmake/modules/: FindMakedev.cmake  avro.cmake  boost.cmake  dkms.cmake  driver.cmake  elfutils.cmake  falco-driver-loader.cmake  falco.cmake  falcosecurity-libs.cmake  filesystem.cmake  glog.cmake  snappy.cmake
cmake/modules/driver-repo/: CMakeLists.txt
cmake/modules/elfutils-repo/: CMakeLists.txt
cmake/modules/falcosecurity-libs-repo/: CMakeLists.txt
docs/: BUILD.md  LIBS.md  SPEC.md
docs/source/: api.rst  conf.py  index.rst  license.rst  python-api.rst  spec.rst
examples/: Dockerfile  Dockerfile.dev  Dockerfile.musl  Dockerfile.musl.dev  Dockerfile.musl.dev.s390x  Makefile  README  README.md  callback.cpp  docker-run.sh  manifest  run-core.sh  run-kmod.sh  run.sh
hooks/: build  post_push  post_test  pre_build  pre_push  pre_test  push  test
include-sysdig/driver/: driver_config.h
lib-sysdig/: libcrypto.pc  libcrypto.so.1.0.0  libssl.pc
libavro/: libavrocpp.so.1.8.2.0
libs/sysdig/lib/: libcrypto.so.1.0.0  libssl.pc  libz.so.1.2.11
libsysdig/: VERSION  libcurl.la  libcurl.lai  libjq.so.1
modules/: Makefile  falco-libs.mri  falco-libs.s390x.mri  falco-libs.x86_64.mri
scripts/: installUBIDependency.sh  installUBIDependencyWoSubManager.sh  runFormat
scripts/cpack/: CPackConfig-libs-musl.cmake  CPackConfig-libs.cmake  CPackConfig.cmake  clean.sh  install-rpm-deps.sh  prepackage-driver.sh  prepackage-libs-musl.sh  prepackage-libs.sh  prepackage.sh
scripts/service/conf/: sysflow.env
scripts/service/driver/: cleanup  start
scripts/service/systemd/: sysflow-collector.service  sysflow.service
src/: Makefile  MurmurHash3.cpp  atfileflowprocessor.cpp  atfileflowprocessor.h  build  container.cpp  container.h  containercontext.cpp  containercontext.h  context.cpp  context.h  controlflowprocessor.cpp  controlflowprocessor.h  dataflow.cpp  dataflow.h  dataflowcontext.cpp  dataflowcontext.h  dataflowprocessor.cpp  dataflowprocessor.h  datatypes.h  file_types.h  filecontext.cpp  filecontext.h  fileeventprocessor.cpp  fileeventprocessor.h  fileflowprocessor.cpp  fileflowprocessor.h  hashtables.h  header.cpp  header.h  headercontext.cpp  headercontext.h  install_linter  k8scontext.cpp  k8scontext.h  k8seventprocessor.cpp  k8seventprocessor.h  lint.results  logger.h  main.cpp  (+44 more)
src/api/: sfinspector.cpp  sfinspector.h
src/avro/: generateCClasses.sh
src/avro/avdl/: sysflow.avdl
src/avro/avpr/: sysflow.avpr
src/avro/avsc/: ActionType.avsc  EventType.avsc  FOID.avsc  NetworkFlow.avsc  Process.avsc  ProcessFlow.avsc  SFHeader.avsc  SysFlow.avsc
src/avro/py3/: genPython.py  requirements.txt  setup.py
src/avro_union/: generateCClasses.sh
src/avro_union/avdl/: sysflow.avdl
src/avro_union/avpr/: sysflow.avpr
src/avro_union/avsc/: Container.avsc  ContainerID.avsc  ContainerType.avsc  FOID.avsc  File.avsc  FileFlow.avsc  NetworkFlow.avsc  OID.avsc  Process.avsc  ProcessFlow.avsc  ResourceType.avsc  SFObjectState.avsc  SysFlow.avsc
src/collector/: CMakeLists.txt  Makefile  main.cpp
src/conf/: log4cxx.properties
src/libs/: CMakeLists.txt  Makefile  MurmurHash3.h  containercontext.cpp  containercontext.h  controlflowprocessor.cpp  dataflowprocessor.cpp  dataflowprocessor.h  datatypes.h  filecontext.cpp  filecontext.h  fileeventprocessor.cpp  fileeventprocessor.h  fileflowprocessor.cpp  fileflowprocessor.h  k8scontext.cpp  k8scontext.h  k8seventprocessor.cpp  k8seventprocessor.h  libsysflow-musl.mri  libsysflow.mri  logger.h  make.sh  maketest.sh  modutils.cpp  modutils.h  networkflowprocessor.cpp  networkflowprocessor.h  processcontext.cpp  processcontext.h  processeventprocessor.cpp  readonly.h  sfcallbackwriter.cpp  sfcallbackwriter.h  sfconfig.h  sffilewriter.cpp  sffilewriter.h  sfmodes.h  sfmultiwriter.h  sfsockwriter.cpp  (+19 more)
src/modules/: Makefile
src/samples/: Dockerfile  Makefile  reader.cpp
src/sysdig/: sdcont.cpp  sdcont.h  sdevent.cpp  sdevent.h  sdfiledescinfo.cpp  sdfiledescinfo.h  sdinspector.cpp  sdinspector.h  sdprocess.cpp  sdprocess.h  sdutils.cpp  sdutils.h  sysdig_calls.h
sysdiginclude/: VERSION
sysdiginclude/curl/: Makefile
sysdiginclude/driver/: driver_config.h
tests/: baseline.bats  sffilecomp.py  tests.bats
tests/alpine/: alpine.scap  alpine.sf
tests/client-server/: client.c  server.c  tcp-client-server.scap  tcp-client-server.sf  tcpclientserver.sf
tests/files/: filer  files.c  files.scap  files.scap.sf  files.scap.txt  files.sf  filesat.c  filesat.scap  filesat.sf  make.sh
tests/mpm-event/: Dockerfile  build  capture  cold_start_capture.scap  cold_start_capture.sf  full_capture.scap  full_capture.sf  httpd.conf  run  test
tests/mpm-preforked/: README.md  build  cold_start_capture.scap  cold_start_capture.sf  full_capture.scap  full_capture.sf  httpd.conf  run
tests/mpm-worker/: build  cold_start_capture.scap  cold_start_capture.sf  full_capture.scap  full_capture.sf  httpd.conf  run  test
tests/namespaces/: create_ns.sh  enter_ns.sh  setns.scap  setns.sf
tests/nginx/: nginx.scap  nginx.sf
tests/nodejs/: mon.1544763289.sf  mon.1544763319.sf  mon.1544763349.sf  mon.1544763379.sf
tests/objectstore/: README.md  client  download.scap  download.sf  ls.scap  ls.sf  run  upload.scap  upload.sf
tests/rename/: rename.scap  rename.sf  rename2at.scap  rename2at.sf
tests/setuid/: make.sh  setuid.c  setuid.scap  setuid.sf
(+114 files in other folders)
